<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DosActivity">


    <LinearLayout
        android:background="@color/verde_ceset"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:background="@color/verde_ceset"
            android:text="@string/evaluacion"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textColor="@color/white" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <io.netopen.hotbitmapgg.library.view.RingProgressBar
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:id="@+id/progress_bar_2"
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:max="100"
                android:layout_marginTop="20dp"
                app:ringColor="@color/morado"
                app:ringProgressColor="@color/fucsia"
                app:ringWidth="3dp"
                app:style="STROKE"
                app:textColor="@color/fucsia"
                app:textIsShow="true"
                app:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/verde_ceset"
                android:textAlignment="inherit"
                android:textSize="40sp"
                android:gravity="center_vertical"
                android:text="@string/pregunta_dos"
                />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginTop="1dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:gravity="center_vertical"
            >

            <com.airbnb.lottie.LottieAnimationView
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:scaleType="centerCrop"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:lottie_imageAssetsFolder="assets"
                app:lottie_fileName="laugh.json"
                app:lottie_loop="true"
                app:lottie_autoPlay="true"
                android:id="@+id/muy_satisfecho_dos" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/muy_satisfecho"
                android:textAlignment="center"
                android:textColor="@color/verde_ceset"
                android:textSize="25sp"
                android:layout_gravity="center"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:gravity="center"
            >

            <com.airbnb.lottie.LottieAnimationView
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:scaleType="centerCrop"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:lottie_imageAssetsFolder="assets"
                app:lottie_fileName="happy.json"
                app:lottie_loop="true"
                app:lottie_autoPlay="true"
                android:id="@+id/satisfecho_dos" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/satisfecho"
                android:textAlignment="center"
                android:textColor="@color/verde_ceset"
                android:textSize="25sp"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:gravity="center"
            >

            <com.airbnb.lottie.LottieAnimationView
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:scaleType="centerCrop"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:lottie_imageAssetsFolder="assets"
                app:lottie_fileName="wow.json"
                app:lottie_loop="true"
                app:lottie_autoPlay="true"
                android:id="@+id/Insatisfecho_dos" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Insatisfecho"
                android:textAlignment="center"
                android:textColor="@color/verde_ceset"
                android:textSize="25sp"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:gravity="center"
            >

            <com.airbnb.lottie.LottieAnimationView
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:scaleType="centerCrop"
                android:layout_width="180dp"
                android:layout_height="180dp"
                app:lottie_imageAssetsFolder="assets"
                android:scaleY="1"
                android:scaleX="1"
                app:lottie_fileName="angry_emoji.json"
                app:lottie_loop="true"
                app:lottie_autoPlay="true"
                android:id="@+id/muy_insatisfecho_dos" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/muy_insatisfecho"
                android:textAlignment="center"
                android:textColor="@color/verde_ceset"
                android:textSize="25sp"
                />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="60dp"
            android:layout_gravity="start"
            android:orientation="vertical"
            android:layout_marginEnd="60dp"
            android:layout_marginStart="20dp">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:lottie_imageAssetsFolder="assets"
                app:lottie_fileName="menu_volver.json"
                app:lottie_loop="true"
                app:lottie_autoPlay="true"
                android:id="@+id/atras" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/atras"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="@color/verde_ceset"
                android:textSize="20sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="60dp">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:lottie_imageAssetsFolder="assets"
                app:lottie_fileName="menu_to_right.json"
                app:lottie_loop="true"
                app:lottie_autoPlay="true"
                android:id="@+id/adelante" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adelante"
                android:textAlignment="center"
                android:textColor="@color/verde_ceset"
                android:textSize="20sp"
                android:layout_gravity="center"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>